--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "librarian"]
 	path = librarian
 	url = https://github.com/danisztls/journal-librarian
-[submodule "pkg/arch"]
-	path = pkg/arch
+[submodule "dist/arch"]
+	path = dist/arch
 	url = ssh://aur@aur.archlinux.org/journal-git.git
